--- a/src/components/PadreItemListContainer/ItemList/ItemList.css
+++ b/src/components/PadreItemListContainer/ItemList/ItemList.css
@@ -3,4 +3,8 @@ h2{
 }
 .container{
     width: 300px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
 }
