--- a/src/components/PadreItemListContainer/ItemList/ItemList.css
+++ b/src/components/PadreItemListContainer/ItemList/ItemList.css
@@ -1,10 +1,10 @@
 h2{
     margin-left: 45%;
 }
-.container{
+/* .conteiner{
     width: 300px;
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
     justify-content: center;
-}
+    flex-wrap: wrap;
+} */
